<resources>
    <string name="app_name">QUIZZY</string>


    <!-- log strings -->
    <string name="username">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="title_activity_login">Connexion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Inscription</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="welcome">"Bienvenue !"</string>
    <string name="invalid_username">Ce pseudo n\'est pas valide !</string>
    <string name="invalid_password">Le mot de passe doit contenir au moins 5 caractères !</string>
    <string name="login_failed">"Connexion impossible"</string>
    <string name="login_button">"Se connecter</string>

    <!-- REGISTER -->
    <string name="register_pseudo">pseudo</string>
    <string name="register_name">nom</string>
    <string name="register_surname">prénom</string>
    <string name="register_email">email</string>
    <string name="register_birthDate">date de naissance</string>
    <string name="register_password">mot de passe</string>
    <string name="register_confirmPassword">confirmer mot de passe</string>
    <string name="register_button">Valider</string>
    <string name="register_RGPD_check">Accepter les conditions d\'utilisation</string>

    <!-- first app page strings -->
    <string name="guest">Invité</string>
    <string name="user">Utilisateur</string>

    <!-- MENU -->
    <string name="action_logout">Logout</string>

    <!-- LOGIN -->
    <string name="loginHint">Your Twitter login</string>
    <string name="passwordHint">Your Twitter password</string>
    <string name="login">Sign in</string>
    <string name="error_no_login">Empty login !</string>
    <string name="error_no_password">Empty password !</string>
    <string name="action_settings">Title!</string>
    <!--USER authenticated -->
    <string name="scores">Historique</string>
    <string name="start_quizz">Commencer un nouveau quizz</string>

    <!-- accueil strings -->
    <string name="accueil">Accueil</string>
    <string name="palmares">Palmares</string>
    <string name="resultat">Resultat</string>
    <string name="text_geographie">GEOGRAPHIE</string>
    <string name="text_science">SCIENCE</string>
    <string name="text_histoire">HISTOIRE</string>
    <string name="foot_text_science">Des questions élémentaires en science</string>
    <string name="foot_text_history">Connaissez vous votre histoire et celle du monde ?</string>
    <string name="foot_text_geography">Des questions élémentaires sur la géographie</string>


    <string name="points">25 points</string>
    <string name="parties">Parties</string>
    <string name="numero25">25</string>
    <string name="date25">17/02/2020</string>
    <string name="points25">26 points</string>
    <string name="numero24">24</string>
    <string name="date24">17/02/2020</string>
    <string name="points24">20 points</string>
    <string name="numero23">23</string>
    <string name="date23">17/02/2020</string>
    <string name="points23">27points</string>
    <string name="numero22">22</string>
    <string name="date22">17/02/2020</string>
    <string name="points22">18 points</string>

    <!-- questions strings -->
    <string name="number_question">05/10</string>
    <string name="question">Quelle est la planète la plus froide du système solaire ?</string>
    <string name="reponse_1">Mars</string>
    <string name="reponse_2">Neptune</string>
    <string name="reponse_3">Jupiter</string>
    <string name="reponse_4">Terre</string>
    <string name="inc">© copyright Quizzy 2020</string>
</resources>
